--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
   "name": "spinny-miniapp-vite",
   "version": "0.0.0",
-  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@solana/wallet-adapter-base": "^0.9.27",
-    "@solana/wallet-adapter-phantom": "^0.9.27",
-    "@solana/wallet-adapter-react": "^0.15.39",
-    "@solana/wallet-adapter-react-ui": "^0.9.39",
-    "@solana/wallet-adapter-wallets": "^0.19.37",
-    "@solana/web3.js": "^1.98.2",
+    "@solana/wallet-adapter-base": "^0.9.20",
+    "@solana/wallet-adapter-phantom": "^0.9.20",
+    "@solana/wallet-adapter-react": "^0.15.18",
+    "@solana/wallet-adapter-react-ui": "^0.9.20",
+    "@solana/web3.js": "^1.89.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "vite-plugin-node-polyfills": "^0.24.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.0.0",
     "vite": "^7.0.6"
   }
 }
